8155980: ARM InterpreterMacroAssembler::get_method_counters() should not be saving caller saved registers

Make get_method_counters() only save registers specified by caller, not all of them

Reviewed-by: dlong, jiangli